// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Prediction /> should render the component as actual type 1`] = `
<Cell
  date="2018-03-28"
  total={300}
  totalOfTheWeek={2130}
  type="actual"
/>
`;

exports[`<Prediction /> should render the component as forecast type 1`] = `
<Cell
  date="2018-03-28"
  total={1500}
  totalOfTheWeek={2130}
  type="forecast"
/>
`;
